--- a/vim/Makefile
+++ b/vim/Makefile
@@ -2,4 +2,6 @@ REPO=https://github.com/vim/vim.git
 DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev
 CONFIGURE_OPTS=--enable-python3interp --enable-gui=gtk3 --with-x
 
-include ../makefile.defs
+include ../std.makefile.defs
+include ../git.makefile.defs
+include ../base.makefile.defs
