--- a/vim/Makefile
+++ b/vim/Makefile
@@ -1,5 +1,6 @@
 REPO=https://github.com/vim/vim.git
-DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev
+DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev silversearcher-ag python3-pip exuberant-ctags
+PIP3_DEPENDENCIES=powerline-status
 CONFIGURE_OPTS=--enable-python3interp --enable-gui=gtk3 --with-x
 
 include ../std.makefile.defs
