--- a/vim/Makefile
+++ b/vim/Makefile
@@ -1,5 +1,5 @@
 REPO=https://github.com/vim/vim.git
-DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev silversearcher-ag exuberant-ctags
+APT_DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev silversearcher-ag exuberant-ctags
 PIP3_DEPENDENCIES=powerline-status
 CONFIGURE_OPTS=--enable-python3interp --enable-gui=gtk3 --with-x
 
