--- a/apt-packages/Makefile
+++ b/apt-packages/Makefile
@@ -1,4 +1,4 @@
-APT_DEPENDENCIES=fish git tmux pass aptitude docker.io rofi emacs jq
+APT_DEPENDENCIES=fish git tmux pass aptitude docker.io rofi emacs jq rsync atop google-chrome-stable irssi
 
 install: preconfigure
 
