Updates from test cases

--- a/apt-packages/Makefile
+++ b/apt-packages/Makefile
@@ -1,8 +1,6 @@
 APT_DEPENDENCIES=fish git tmux pass aptitude docker.io rofi emacs jq rsync atop google-chrome-stable irssi
 
-install: preconfigure
-
-src:
+install:
 
 include ../base.makefile.defs
 
