--- a/vim/Makefile
+++ b/vim/Makefile
@@ -1,6 +1,6 @@
 REPO=https://github.com/vim/vim.git
-APT_DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev silversearcher-ag exuberant-ctags
-PIP3_DEPENDENCIES=powerline-status
+APT_DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev silversearcher-ag exuberant-ctags python3-venv
+PIP3_DEPENDENCIES=powerline-status jedi
 CONFIGURE_OPTS=--enable-python3interp --enable-gui=gtk3 --with-x
 
 include ../std.makefile.defs
