Refactor init to always run make

--- a/apt-packages/Makefile
+++ b/apt-packages/Makefile
@@ -1,6 +1,7 @@
 APT_DEPENDENCIES=git vim tmux pass aptitude docker.io rofi jq rsync atop irssi emacs
+PACKAGE_URLS = https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 
 install:
 
-include ../base.makefile.defs
+include ../defs/base.makefile
 
