--- a/fish/Makefile
+++ b/fish/Makefile
@@ -5,5 +5,5 @@ install:
 sudo-configure:
 	chsh $(shell id --user --name) --shell $(shell which fish)
 
-include ../base.makefile.defs
+include ../defs/base.makefile
 
