--- a/fzf/Makefile
+++ b/fzf/Makefile
@@ -3,8 +3,8 @@ REPO=https://github.com/junegunn/fzf
 install: preconfigure
 	src/install --completion --key-bindings --update-rc --no-zsh
 
-include ../git.makefile.defs
-include ../base.makefile.defs
+include ../defs/git.makefile
+include ../defs/base.makefile
 
 uninstall:
 	! [ -x src/uninstall ] || src/uninstall
