--- a/nodejs/Makefile
+++ b/nodejs/Makefile
@@ -1,4 +1,4 @@
 TARBALL_URL = https://nodejs.org/dist/v14.15.3/node-v14.15.3-linux-x64.tar.xz
 
-include ../tarball.makefile.defs
-include ../base.makefile.defs
+include ../defs/tarball.makefile
+include ../defs/base.makefile
