--- a/vim/Makefile
+++ b/vim/Makefile
@@ -3,6 +3,6 @@ APT_DEPENDENCIES=xorg-dev libgtk-3-dev python3-dev libncurses-dev silversearcher
 PIP3_DEPENDENCIES=powerline-status jedi
 CONFIGURE_OPTS=--enable-python3interp --enable-gui=gtk3 --with-x
 
-include ../std.makefile.defs
-include ../git.makefile.defs
-include ../base.makefile.defs
+include ../defs/std.makefile
+include ../defs/git.makefile
+include ../defs/base.makefile
