Move docker into separate subtarget and fix apt-configure

--- a/apt-packages/Makefile
+++ b/apt-packages/Makefile
@@ -1,4 +1,4 @@
-APT_DEPENDENCIES=git vim tmux pass aptitude docker.io rofi jq rsync atop irssi emacs
+APT_DEPENDENCIES=vim tmux pass aptitude rofi jq rsync atop irssi emacs
 PACKAGE_URLS = https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 
 install:
