--- a/fish/Makefile
+++ b/fish/Makefile
@@ -3,7 +3,7 @@ APT_DEPENDENCIES=fish
 install:
 
 sudo-configure:
-	chsh $(shell id --user --name) --shell $(shell which fish)
+	chsh $(OPT_USER) --shell $(shell which fish)
 
 include ../defs/base.makefile
 
